--- a/site/login.html
+++ b/site/login.html
@@ -34,7 +34,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<link href="" rel="chrome-webstore-item">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/login.css" rel="stylesheet">
 </head>
 
 <body>
