--- a/site/index.html
+++ b/site/index.html
@@ -55,47 +55,358 @@
 				</li>
 			</ul>
 		</nav>
-		<span class="toggler active" data-toggle="grid">
-			<span class="mdi mdi-view-module"></span>
-		</span>
-		<span class="toggler" data-toggle="list">
-			<span class="mdi mdi-view-list"></span>
-		</span>
-		<ul class="surveys grid">
-			<li class="survey-item">
-				<span class="survey-country list-only">
-					1KM
-				</span>
-				<span class="survey-name">
-					Claudio Rodrigues
-				</span>
-				<span class="survey-country grid-only">
-					1KM
-				</span>
-				<div class="pull-right">
-					<span class="survey-progress">
-						<span class="survey-progress-bg">
-							<span class="survey-progress-fg" style="width: 88%;"></span>
-						</span>
-						<span class="survey-progress-labels">
-							<span class="survey-progress-label">
-									88% <span>(9.7/10)</span>
+		<div class="block-list" id="extrato">
+			<span class="toggler active" data-toggle="grid">
+				<span class="mdi mdi-view-module"></span>
+			</span>
+			<span class="toggler" data-toggle="list">
+				<span class="mdi mdi-view-list"></span>
+			</span>
+			<ul class="surveys grid">
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00001
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
 							</span>
 						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
 					</span>
-					<span class="survey-end-date ended">
-						19 Lavagens
+					<span class="survey-name">
+						Claudio Rodrigues
 					</span>
-					<span class="survey-stage">
-						<span class="stage active"></span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
 					</span>
-				</div>
-			</li>
-		</ul>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+				<li class="survey-item">
+					<span class="survey-country ">
+						#00002
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							R$ 25,00
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+			</ul>
 		</div>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="js/main.js"></script>
+		<div class="block-list" id="usuario">
+			<span class="toggler active" data-toggle="grid">
+				<span class="mdi mdi-view-module"></span>
+			</span>
+			<span class="toggler" data-toggle="list">
+				<span class="mdi mdi-view-list"></span>
+			</span>
+			<ul class="surveys grid">
+				<li class="survey-item">
+					<span class="survey-country list-only">
+						1KM
+					</span>
+					<span class="survey-name">
+						Claudio Rodrigues
+					</span>
+					<span class="survey-country grid-only">
+						1KM
+					</span>
+					<div class="pull-right">
+						<span class="survey-progress">
+							<span class="survey-progress-bg">
+								<span class="survey-progress-fg" style="width: 88%;"></span>
+							</span>
+							<span class="survey-progress-labels">
+								<span class="survey-progress-label">
+									88%
+									<span>(9.7/10)</span>
+								</span>
+							</span>
+						</span>
+						<span class="survey-end-date ended">
+							19 Lavagens
+						</span>
+						<span class="survey-stage">
+							<span class="stage active"></span>
+						</span>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</main>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
